# Image_editor

./: CMakeLists.txt  main.cpp
inc/: tools.h  widget.h
src/: tools.cpp  widget.cpp
